# Linux-Daemon

./: CMakeLists.txt  README.md  daemon.c  loadconfig.c
src/: daemon.c  daemon.conf
